--- a/canteen-backend/src/main/resources/application.yaml
+++ b/canteen-backend/src/main/resources/application.yaml
@@ -7,7 +7,9 @@ spring:
     url: jdbc:mysql://localhost:3306/canteen?serverTimezone=GMT%2b8
     username: root
     password: 123456
-
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 mybatis:
   mapper-locations:  classpath:mapper/*.xml
