--- a/canteen-backend/src/main/resources/application.yaml
+++ b/canteen-backend/src/main/resources/application.yaml
@@ -17,3 +17,7 @@ mybatis:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+files:
+  upload:
+    path: E:/Canteen/canteen-backend/src/main/resources/files/
