--- a/canteen-backend/src/main/resources/application.yaml
+++ b/canteen-backend/src/main/resources/application.yaml
@@ -7,6 +7,10 @@ spring:
     url: jdbc:mysql://localhost:3306/canteen?serverTimezone=GMT%2b8
     username: root
     password: 123456
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
